fix: align accessories on left on print

--- a/wwwroot/assets/style.css
+++ b/wwwroot/assets/style.css
@@ -609,7 +609,7 @@ h2 {
     }
 
 
-    .accessories .mold a {
+    .accessories .mold a>img {
         display: none;
     }
 
@@ -619,6 +619,7 @@ h2 {
 
     .accessories>ul>.mold {
         padding: 0;
+        align-self: flex-start;
     }
 
     header {
